# simple_model

./: .codecov.yaml  .gitignore  404.html  Cargo.toml  README.md  autodoc-boundary.html  autodoc-building.html  autodoc-construction.html  autodoc-electricheater.html  autodoc-fenestration.html  autodoc-hvac.html  autodoc-idealheatercooler.html  autodoc-infiltration.html  autodoc-luminaire.html  autodoc-material.html  autodoc-shelterclass.html  autodoc-space.html  autodoc-substance.html  autodoc-surface.html  chapter_1.html  check.txt  clippy.txt  crates.js  index.html  index.md  introduction.html  pre_commit.sh  print.html  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js
.github/workflows/: build.yaml  coverage.yaml  coverage.yml  docs.yaml  ioreference.yaml  style.yaml  test.yaml  test_and_deploy_doc.yml  tests.yaml
benches/: benchmark.rs
derive/: Cargo.toml
derive/src/: common_path.rs  docs.rs  field.rs  lib.rs  object.rs  object_enum.rs  object_struct.rs  simulation_state_behaviour.rs
docs/: index.html
docs/ioreference/: book.toml
ioreference/: book.toml
ioreference/book/: 404.html  auto-boundary.html  auto-building.html  auto-construction.html  auto-gas.html  (+28 more)
rustdoc/: .rustc_info.json  .rustdoc_fingerprint.json
simple_model/: all.html  enum.Boundary.html  enum.FenestrationPositions.html  enum.FenestrationType.html  enum.Infiltration.html  enum.ShelterClass.html  enum.SimulationStateElement.html  enum.Substance.html  index.html  sidebar-items.js  struct.Building.html  struct.Construction.html  struct.Fenestration.html  struct.Luminaire.html  struct.Material.html  struct.SimpleModel.html  struct.SimulationStateHeader.html  struct.Space.html  struct.Substance.html  struct.Surface.html  type.Float.html  type.SimulationState.html
src/: boundary.rs  building.rs  building_state.rs  building_state_element.rs  construction.rs  fenestration.rs  heating_cooling.rs  infiltration.rs  lib.rs  luminaire.rs  material.rs  model.rs  object_trait.rs  old_substance.rs  rhai_api.rs  scanner.rs  shading.rs  simulation_state.rs  simulation_state_element.rs  space.rs  substance.rs  surface.rs
test_data/: box.spl  example_building.md  script.rhai
(+465 files in other folders)
