[package]
name = "simple_model"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"



[dependencies]
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
building_state_macro = { git = "https://github.com/SIMPLE-BuildingSimulation/building_state_macro.git" }
# building_state_macro = { path = "../building_state_macro" }
rhai = { version = "1.1.2" }



[features]
default = []
float = ["geometry3d/float", "rhai/f32_float"]
wasm = ["rhai/wasm-bindgen"]
