
[workspace]
members = ['derive']

[package]
name = "simple_model"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2021"



[dependencies]
derive = { path = "derive" } 
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git"}
schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
rhai = { version = "1.5" }



[features]
default = []
float = ["geometry3d/float", "rhai/f32_float"]
wasm = ["rhai/wasm-bindgen"]
